<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ActivityBuscar">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingBottom="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                style="@style/estiloTextoSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/textCamposOpcionales"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textBuscarSearch"
                style="@style/estiloTextoSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textQueBuscas" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextBuscar"
                    style="@style/estiloEditTextSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp" />

            </LinearLayout>


            <TextView
                android:id="@+id/textPrecioSearch"
                style="@style/estiloTextoSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textPrecio" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editPrecioDesde"
                    style="@style/estiloEditTextSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:hint="@string/textDesde"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/editPrecioHasta"
                    style="@style/estiloEditTextSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:hint="@string/textHasta"
                    android:inputType="number" />
            </LinearLayout>

            <TextView
                android:id="@+id/textCategoriaSearch"
                style="@style/estiloTextoSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textCategoria" />

            <Spinner
                android:id="@+id/spinnerSearchCategoria"
                style="@style/estiloEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/cardview_background"
                android:entries="@array/array_categorias2"
                android:paddingLeft="20dp"
                android:prompt="@string/spinner_categorias"
                android:spinnerMode="dialog" />

            <TextView
                android:id="@+id/textProvinciaSearch"
                style="@style/estiloTextoSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textProvincia" />

            <Spinner
                android:id="@+id/spinnerSearchProvincia"
                style="@style/estiloEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/cardview_background"
                android:entries="@array/array_provincias"
                android:paddingLeft="20dp"
                android:prompt="@string/spinner_provincias"
                android:spinnerMode="dialog" />

            <TextView
                android:id="@+id/textMarcaSearch"
                style="@style/estiloTextoSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textMarca" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editMarcaSearch"
                    style="@style/estiloEditTextSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <TextView
                android:id="@+id/textModeloSearch"
                style="@style/estiloTextoSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textModelo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editModeloSearch"
                    style="@style/estiloEditTextSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|right">

        <Button
            android:id="@+id/botonSearch"
            style="@style/estiloBotonSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/textBotonBuscar" />
    </FrameLayout>

</RelativeLayout>