<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.adrian.telovendo.activities.ActivityLogin">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/contentDesc"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:alpha="0.9"
        android:background="@drawable/caja_sombreada"
        android:elevation="16dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textoIniciarLogin"
            style="@style/estiloTexto"

            android:text="@string/textIniciarLogin" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <EditText
                android:id="@+id/editUsuarioLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userLogin"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/white">

            <EditText
                android:id="@+id/editPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/passwordLogin"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/buttonAccederLogin"
            style="@style/estiloBoton"
            android:layout_marginTop="20dp"
            android:background="@color/blue"
            android:text="@string/buttonAccederLogin" />

        <Button
            android:id="@+id/buttonRegistrarLogin"
            style="@style/estiloBoton"
            android:layout_marginTop="20dp"
            android:background="@color/rojo"
            android:text="@string/buttonRegisterLogin" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
