<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/estiloActivityNuevo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.adrian.telovendo.activities.ActivityNuevo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editNuevoNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editNuevoNombre"
                style="@style/estiloEditTextSearch"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editNuevoDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editNuevoDescripcion"
                style="@style/estiloEditTextSearch"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/editNuevoPrecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editNuevoPrecio"
                style="@style/estiloEditTextSearch"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/editNuevoMarca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editNuevoMarca"
                style="@style/estiloEditTextSearch"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editNuevoModelo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editNuevoModelo"
                style="@style/estiloEditTextSearch"
                android:inputType="textPersonName" />

            <Spinner
                android:id="@+id/spinnerNuevoCategorias"
                style="@style/estiloEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/cardview_background"
                android:entries="@array/array_categorias"
                android:paddingLeft="20dp"
                android:prompt="@string/spinner_categorias"
                android:spinnerMode="dialog" />

            <TextView
                android:id="@+id/textNuevoAnyadirFotos"
                style="@style/estiloEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textNuevoAnyadirFotos"
                android:textSize="18sp" />

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/layoutFotos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/estiloEditText"
                    android:layout_marginTop="10dp">

                    <ImageButton
                        android:id="@+id/botonNuevoAnyadirFoto"
                        android:layout_width="250px"
                        android:layout_height="250px"
                        android:background="@drawable/cardview_background"
                        android:padding="30dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_button_add" />

                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
