<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imagenFotoCuentaEditar"
                android:layout_width="260dp"
                android:layout_height="260dp"
                android:layout_margin="30dp"
                android:src="@drawable/avatar" />

            <EditText
                android:id="@+id/editNombreCuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:ems="10"
                android:hint="@string/editNombreCuenta"
                style="@style/estiloEditTextSearch"
                android:inputType="textPersonName" />


            <EditText
                android:id="@+id/editApellidosCuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editApellidosCuenta"
                style="@style/estiloEditTextSearch"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editPaisCuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editPaisCuenta"
                style="@style/estiloEditTextSearch"
                android:inputType="textPersonName" />

            <Spinner
                android:id="@+id/spinnerEditProvincia"
                style="@style/estiloEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/cardview_background"
                android:entries="@array/array_provincias2"
                android:paddingLeft="20dp"
                android:prompt="@string/spinner_provincias"
                android:spinnerMode="dialog" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>